archive/wazuh/wazuh-master-sts.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Wazuh master StatefulSet

apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: wazuh-manager-master
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-manager
      node-type: master
  serviceName: wazuh-cluster
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: wazuh-manager
        node-type: master
      name: wazuh-manager-master
    spec:
      volumes:
        - name: config
          configMap:
            name: wazuh-conf
        - name: filebeat-certs
          secret:
            secretName: indexer-certs
        - name: wazuh-authd-pass
          secret:
            secretName: wazuh-authd-pass
      securityContext:
        fsGroup: 101
      nodeSelector:
        kubernetes.io/hostname: k3s-home-2
      containers:
        - name: wazuh-manager
          image: 'wazuh/wazuh-manager:4.14.8@sha256:412f665c77af5497780d29d0d9f069d7a169c5eca45e9a3a47a587d9cfc99b55'
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1280Mi
          securityContext:
            capabilities:
              add: ["SYS_CHROOT"]
          volumeMounts:
            - name: config
              mountPath: /wazuh-config-mount/etc/ossec.conf
              subPath: master.conf
              readOnly: true
            - name: filebeat-certs
              mountPath: /etc/ssl/root-ca.pem
              readOnly: true
              subPath: root-ca.pem
            - name: filebeat-certs
              mountPath: /etc/ssl/filebeat.pem
              subPath: filebeat.pem
              readOnly: true
            - name: filebeat-certs
              mountPath: /etc/ssl/filebeat.key
              subPath: filebeat-key.pem
              readOnly: true
            - name: wazuh-authd-pass
              mountPath: /wazuh-config-mount/etc/authd.pass
              subPath: authd.pass
              readOnly: true
            - name: wazuh-manager-master
              mountPath: /var/ossec/api/configuration
              subPath: wazuh/var/ossec/api/configuration
            - name: wazuh-manager-master
              mountPath: /var/ossec/etc
              subPath: wazuh/var/ossec/etc
            - name: wazuh-manager-master
              mountPath: /var/ossec/logs
              subPath: wazuh/var/ossec/logs
            - name: wazuh-manager-master
              mountPath: /var/ossec/queue
              subPath: wazuh/var/ossec/queue
            - name: wazuh-manager-master
              mountPath: /var/ossec/var/multigroups
              subPath: wazuh/var/ossec/var/multigroups
            - name: wazuh-manager-master
              mountPath: /var/ossec/integrations
              subPath: wazuh/var/ossec/integrations
            - name: wazuh-manager-master
              mountPath: /var/ossec/active-response/bin
              subPath: wazuh/var/ossec/active-response/bin
            - name: wazuh-manager-master
              mountPath: /var/ossec/agentless
              subPath: wazuh/var/ossec/agentless
            - name: wazuh-manager-master
              mountPath: /var/ossec/wodles
              subPath: wazuh/var/ossec/wodles
            - name: wazuh-manager-master
              mountPath: /etc/filebeat
              subPath: filebeat/etc/filebeat
            - name: wazuh-manager-master
              mountPath: /var/lib/filebeat
              subPath: filebeat/var/lib/filebeat
          ports:
            - containerPort: 1515
              name: registration
            - containerPort: 1516
              name: cluster
            - containerPort: 55000
              name: api
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: wazuh-manager-master
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        volumeMode: Filesystem
        resources:
          requests:
            storage: 2Gi
