archive/wazuh/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wazuh-dashboard
  namespace: wazuh
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wazuh.k8s.hu.ls`)
      middlewares:
        - name: maintenance-errors
          namespace: nc-maintenance
        - name: authentik
          namespace: authentik
      services:
        - name: dashboard
          port: 443
          serversTransport: wazuh-dashboard-tls
  tls:
    secretName: wildcard-k8s-hu-ls-tls
